# videocontentai

./: .gitignore  .venv  LICENSE  README.md  ROADMAP.md  flux-web.py  gen_square_cover.py  generate-flux-image.py  pyproject.toml  setup-jetson.sh  test_instagram_cover.py  video-content
.claude/commands/: check-readiness.md  pre-process.md  pull-input.md  push-output.md  replace-background.md  review-editing-plan.md  sync.md
.claude/skills/content-reviewer/: SKILL.md  citation-report.json
.claude/skills/cut/: SKILL.md
.claude/skills/editorial-reviewer/: SKILL.md
.claude/skills/video-editing/: SKILL.md  citation-report.json
.github/workflows/: claude-review.yml
assets/brands/dbexpertai/: brand.json
assets/brands/founder/: brand.json
assets/voice_refs/: founder.m4a
config/: default.toml
config/cut_specs/: landscape-dbexpertai.json  landscape-founder.json  moods.json  portrait-dbexpertai.json  portrait-founder.json
docs/: editing-plan-format.md  local-image-gen-research.md  thumbnails-research.md
research/: music-sync-research.md  retention-editing-research.md
scripts/: emotion2vec_analyze.py  make_voice_profiles.py  test_background.py  vad_analyze.py
src/videngine/: __init__.py  audio_preprocess.py  brand.py  cli.py  config.py  models.py  pipeline.py  storage.py
src/videngine/ai/: client.py  prompts.py  schemas.py  (+2 more)
test_output/: bindex.html
voice-profiles/: big-font.css  recording-guide.md  recording-script.md
voice-profiles/demos/: index.html
voice-profiles/recordings/: analysis-report.md  transcripts.json  vad_analysis.json
(+30 files in other folders)
