[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videngine"
version = "0.1.0"
description = "Automated video production pipeline with AI-driven editing"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "rich>=13.0",
]

[project.scripts]
videngine = "videngine.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/videngine"]
