[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videngine"
version = "0.1.0"
description = "Automated video production pipeline with AI-driven editing"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "Pillow>=10.0",
    "httpx>=0.25",
]

[project.scripts]
videngine = "videngine.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/videngine"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["videngine"]
